remove youtube url

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <tr>
       <td><img src="images/keval.jpg" alt="keval profile picture"></td>
       <td><h1>keval morasiya</h1>
-      <p><em>→ I am IT student and a <strong><a href="http://youtube.com">web devloper</a></strong>.</em></p>
+      <p>→ I am IT student and web devloper</p>
       <p>→ I am an ios and android devloper.I love chai and brew my own beers.</p></td>
     </tr>
   </table>
